--- a/Fossil Hunter/Assets/UI/Layouts/InfoPopUpUI.uxml
+++ b/Fossil Hunter/Assets/UI/Layouts/InfoPopUpUI.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement name="VsE_Root" style="flex-grow: 1;">
-        <ui:VisualElement name="VsE_Window" style="flex-grow: 1; flex-direction: row-reverse; background-color: rgba(0, 0, 0, 0.92);">
+        <ui:VisualElement name="VsE_Window" style="flex-grow: 1; flex-direction: row-reverse; background-color: rgba(0, 0, 0, 0.92); background-size: contain;">
             <ui:Button text="X" name="Btn_Close" style="width: 100px; height: 100px; margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px; background-color: rgb(217, 0, 0); border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px; border-left-color: rgb(113, 0, 0); border-right-color: rgb(113, 0, 0); border-top-color: rgb(113, 0, 0); border-bottom-color: rgb(113, 0, 0); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px;" />
         </ui:VisualElement>
         <ui:VisualElement name="VsE_InfoArea" style="flex-grow: 1; width: auto; height: 20%; background-color: rgba(0, 0, 0, 0.92);">
