--- a/Fossil Hunter/Assets/UI/Layouts/InfoPopUpUI.uxml
+++ b/Fossil Hunter/Assets/UI/Layouts/InfoPopUpUI.uxml
@@ -2,6 +2,9 @@
     <ui:VisualElement name="VsE_Root" style="flex-grow: 1;">
         <ui:VisualElement name="VsE_Window" style="flex-grow: 1; flex-direction: row-reverse; background-color: rgba(0, 0, 0, 0.92); background-size: contain;">
             <ui:Button text="X" name="Btn_Close" style="width: 100px; height: 100px; margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px; background-color: rgb(217, 0, 0); border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px; border-left-color: rgb(113, 0, 0); border-right-color: rgb(113, 0, 0); border-top-color: rgb(113, 0, 0); border-bottom-color: rgb(113, 0, 0); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px;" />
+            <Bindings>
+                <ui:DataBinding property="style.backgroundImage" data-source="project://database/Assets/Content/Scriptable%20Objects/AmmoniteInfo_SO.asset?fileID=11400000&amp;guid=d611d0088ec4ae04a85ac6635b4bc615&amp;type=2#AmmoniteInfo_SO" binding-mode="ToTarget" data-source-path="sprite" />
+            </Bindings>
         </ui:VisualElement>
         <ui:VisualElement name="VsE_InfoArea" style="flex-grow: 1; width: auto; height: 20%; background-color: rgba(0, 0, 0, 0.92);">
             <ui:Label text="Bones are Stones" name="Lbl_InfoText" style="font-size: 50px; height: 96%; background-color: rgb(185, 161, 93); border-top-left-radius: 20px; border-top-right-radius: 20px; border-bottom-right-radius: 20px; border-bottom-left-radius: 20px; margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px; padding-right: 4px; padding-left: 4px; border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
