--- a/Fossil Hunter/Assets/UI/Layouts/T_Overlay.uxml
+++ b/Fossil Hunter/Assets/UI/Layouts/T_Overlay.uxml
@@ -1,9 +1,10 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <ui:VisualElement style="flex-grow: 1;">
-        <ui:ScrollView name="ScrollView" style="height: 545px; align-content: flex-end; align-self: flex-start; font-size: 96px; width: 1854px; position: absolute; top: 505px; left: 29px; background-color: rgb(190, 190, 190);">
-            <ui:Label text="Chat&#10;" name="ChatHeader" style="position: relative; top: 10px; left: 10px; height: 72px; width: 198px; font-size: 48px;" />
-            <ui:Label name="Chat" style="position: absolute; top: 74px; left: 13px; height: 325px; width: 1779px; font-size: 36px;" />
-            <ui:TextField placeholder-text="Write Message" vertical-scroller-visibility="AlwaysVisible" style="position: absolute; top: 448px; left: 16px; width: 1812px; font-size: 48px;" />
+        <ui:ScrollView name="MessageScroll" style="height: 545px; align-content: flex-end; align-self: flex-start; font-size: 96px; width: 1854px; position: absolute; top: 505px; left: 29px; background-color: rgb(190, 190, 190);">
+            <ui:Label text="Chat&#10;" name="ChatHeader" style="position: relative; top: 10px; left: 15px; height: 72px; width: 198px; font-size: 48px;" />
+            <ui:Label name="MessageField" style="position: absolute; top: 74px; left: 13px; height: 325px; width: 1779px; font-size: 36px;" />
+            <ui:TextField placeholder-text="Write Message" vertical-scroller-visibility="AlwaysVisible" name="InputField" style="position: absolute; top: 450px; left: 15px; width: 1480px; font-size: 48px;" />
+            <ui:Button text="Send" name="SendButton" style="position: absolute; top: 450px; left: 1510px; background-color: rgb(240, 240, 240); height: auto; font-size: 48px; width: 320px;" />
         </ui:ScrollView>
         <ui:Label text="IP Adress:" name="IpText" style="font-size: 96px; background-color: rgb(190, 190, 190); position: absolute; top: 101px; left: 112px; width: 1659px;" />
         <ui:Label text="Number of Players:" name="PlayersText" style="font-size: 96px; background-color: rgb(190, 190, 190); position: absolute; top: 301px; left: 110px; width: 1659px;" />
