--- a/Fossil Hunter/Assets/UI/Layouts/S_Chat.uxml
+++ b/Fossil Hunter/Assets/UI/Layouts/S_Chat.uxml
@@ -1,7 +1,9 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:ScrollView name="ScrollView" style="position: absolute; height: 344px; width: 837px; top: 723px; left: 17px; background-color: rgb(180, 180, 180);">
-        <ui:Label text="Chat:" name="ChatHeader" style="height: 49px; width: 129px; font-size: 36px; position: absolute; top: 5px; left: 10px;" />
-        <ui:Label text="&#10;" name="Chat" style="height: 100px; width: 800px; position: relative; top: 50px; left: 10px; font-size: 36px;" />
-        <ui:TextField placeholder-text="Write Message" style="position: absolute; top: 278px; left: 8px; width: 810px; font-size: 36px; height: 58px; align-items: stretch; justify-content: flex-start; align-self: stretch; flex-direction: row;" />
+    <ui:ScrollView name="MessageScroll" style="position: absolute; height: 344px; width: 837px; top: 723px; left: 17px; background-color: rgb(180, 180, 180);">
+        <ui:Label text="Chat:" name="Header" style="height: 50px; width: 130px; font-size: 36px; position: absolute; top: 5px; left: 10px;" />
+        <ui:Label text="&#10;" name="Chat" style="height: 209px; width: 805px; position: relative; top: 50px; left: 10px; font-size: 36px;" />
+        <ui:Button text="X" name="CloseButton" style="position: absolute; top: 0; left: 784px; height: 40px; width: 45px; -unity-text-outline-color: rgb(2, 2, 2); background-color: rgb(255, 0, 0); -unity-font-style: bold;" />
+        <ui:Button text="Send" name="SendButton" style="font-size: 36px; background-color: rgb(240, 240, 240); position: absolute; top: 260px; left: 670px; width: 150px; height: 70px;" />
+        <ui:TextField placeholder-text="Write Message" name="InputField" style="position: absolute; top: 260px; left: 10px; width: 650px; font-size: 36px; height: 70px; align-items: stretch; justify-content: flex-start; align-self: stretch; flex-direction: row;" />
     </ui:ScrollView>
 </ui:UXML>
