--- a/Fossil Hunter/Assets/UI/Layouts/InfoPopUpUI.uxml
+++ b/Fossil Hunter/Assets/UI/Layouts/InfoPopUpUI.uxml
@@ -3,7 +3,7 @@
         <ui:VisualElement name="VsE_Window" style="flex-grow: 1; flex-direction: row-reverse; background-color: rgba(0, 0, 0, 0.92); background-size: contain;">
             <ui:Button text="X" name="Btn_Close" style="width: 100px; height: 100px; margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px; background-color: rgb(217, 0, 0); border-top-width: 5px; border-right-width: 5px; border-bottom-width: 5px; border-left-width: 5px; border-left-color: rgb(113, 0, 0); border-right-color: rgb(113, 0, 0); border-top-color: rgb(113, 0, 0); border-bottom-color: rgb(113, 0, 0); border-top-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px;" />
             <Bindings>
-                <ui:DataBinding property="style.backgroundImage" data-source="project://database/Assets/Content/Scriptable%20Objects/AmmoniteInfo_SO.asset?fileID=11400000&amp;guid=d611d0088ec4ae04a85ac6635b4bc615&amp;type=2#AmmoniteInfo_SO" binding-mode="ToTarget" data-source-path="sprite" />
+                <ui:DataBinding property="style.backgroundImage" data-source="project://database/Assets/Content/Scriptable%20Objects/InfoBoxFossilPreview.asset?fileID=11400000&amp;guid=6fd98e15f138fcf41a6f2d96bab265eb&amp;type=2#InfoBoxFossilPreview" binding-mode="ToTarget" data-source-path="GetViewedSprite" />
             </Bindings>
         </ui:VisualElement>
         <ui:VisualElement name="VsE_InfoArea" style="flex-grow: 1; width: auto; height: 20%; background-color: rgba(0, 0, 0, 0.92);">
