--- a/Fossil Hunter/Assets/UI/Layouts/BeforeLogin/B_SignUp.uxml
+++ b/Fossil Hunter/Assets/UI/Layouts/BeforeLogin/B_SignUp.uxml
@@ -1,6 +1,6 @@
 <ui:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Styles/SceneUIStyle.uss?fileID=7433441132597879392&amp;guid=7534f4e131c5db54caa48f959b59c5aa&amp;type=3#SceneUIStyle" />
-    <ui:TextField placeholder-text="Username" name="NewUsername" max-length="12" style="font-size: 96px; top: 12.5%; align-self: center; flex-direction: row; -unity-text-align: upper-center; width: 50%; height: 150px; color: rgb(0, 0, 0); background-color: rgb(0, 0, 0);" />
-    <ui:TextField placeholder-text="Password" name="Password" password="true" max-length="12" style="top: 25%; font-size: 96px; align-self: center; width: 50%; height: 150px;" />
+    <ui:TextField placeholder-text="New Username" name="NewUsername" max-length="12" style="font-size: 96px; top: 12.5%; align-self: center; flex-direction: row; -unity-text-align: upper-center; width: 50%; height: 150px; color: rgb(0, 0, 0); background-color: rgb(0, 0, 0);" />
+    <ui:TextField placeholder-text="New Password" name="NewPassword" password="true" max-length="12" style="top: 25%; font-size: 96px; align-self: center; width: 50%; height: 150px;" />
     <ui:Button text="Sign Up" name="SignUpButton" style="top: 37.5%; font-size: 96px; width: 50%; align-self: center;" />
 </ui:UXML>
